# tools

./: README.md  nav.pgm  nav.yaml
4_10/build-test_111-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
4_10/build-test_111-Desktop_Qt_6_5_3_GCC_64bit-Debug/.cmake/api/v1/reply/: index-2024-04-10T06-21-58-0107.json  (+2 more)
4_10/build-test_111-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
4_10/build-test_111-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
4_10/build-test_111-Desktop_Qt_6_5_3_GCC_64bit-Debug/NodeSim_autogen/: deps  mocs_compilation.cpp
4_10/build-test_111-Desktop_Qt_6_5_3_GCC_64bit-Debug/NodeSim_autogen/DIG64O274K/: moc_FlowChartScene.cpp  moc_FlowChartScene.cpp.d  moc_FlowChartView.cpp  moc_FlowChartView.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_node_content_widget.cpp  moc_node_content_widget.cpp.d
4_10/test_111/: CMakeLists.txt  main.cpp
4_10/test_111/inc/: FlowChartScene.h  FlowChartView.h  Node_Serializable.h  mainwindow.h  node_content_widget.h  node_edge.h  node_graphics_cutLine.h  node_graphics_edge.h  node_graphics_node.h  node_graphics_socket.h  node_node.h  node_scene.h  node_socket.h
4_10/test_111/src/: FlowChartScene.cpp  FlowChartView.cpp  Node_Serializable.cpp  mainwindow.cpp  node_content_widget.cpp  node_edge.cpp  node_graphics_cutLine.cpp  node_graphics_edge.cpp  node_graphics_node.cpp  node_graphics_socket.cpp  node_node.cpp  node_scene.cpp  node_socket.cpp
4_10/test_111/thirdpkg/spdlog/: stopwatch.h  tweakme.h
4_10/test_111/thirdpkg/spdlog/fmt/: chrono.h  fmt.h  ostr.h
4_10/test_111/thirdpkg/spdlog/fmt/bundled/: color.h  core.h  format.h
4_10/test_111/thirdpkg/spdlog/sinks/: dup_filter_sink.h  wincolor_sink-inl.h
get_coordinate/build-get_coordinate-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  get_coordinate
get_coordinate/build-get_coordinate-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
get_coordinate/build-get_coordinate-Desktop_Qt_6_5_3_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
get_coordinate/build-get_coordinate-Desktop_Qt_6_5_3_GCC_64bit-Debug/get_coordinate_autogen/: deps
get_coordinate/get_coordinate/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
tools/: CMakeLists.txt  decision_tree.yaml  main.cpp  pgm2jpg.cpp
(+1076 files in other folders)
